# bilateral

./: CMakeLists.txt  LICENSE  README.md  _env.lua  bilateral-scm-1.rockspec  filter.cpp  init.lua  install.sh
generic/: filter.cpp
