CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O3")
set(CMAKE_CXX_STANDARD 11)
FIND_PACKAGE(Torch REQUIRED)

SET(src "${CMAKE_CURRENT_SOURCE_DIR}/filter.cpp")
ADD_TORCH_PACKAGE(filter "${src}" "${luasrc}" "filter Filter")
TARGET_LINK_LIBRARIES(filter luaT TH Half)
IF(LUALIB)
  TARGET_LINK_LIBRARIES(filter ${LUALIB} luaT TH Half)
ENDIF()

FILE(GLOB luasrc ./*.lua)

ADD_TORCH_PACKAGE(bilateral "${src}" "${luasrc}" "Bilateral Filter")
TARGET_LINK_LIBRARIES(bilateral luaT TH)
IF(LUALIB)
  TARGET_LINK_LIBRARIES(bilateral ${LUALIB})
ENDIF()
